--- a/TODO
+++ b/TODO
@@ -118,3 +118,9 @@ text, but doesn't show comments
 % uncomment to omit comments from compiled version...
 %\newcommand{\person1}[3][omit]{\addcomment{omit}{#2}{#3}}
 %\newcommand{\person2}[3][omit]{\addcomment{omit}{#2}{#3}}
+
+* Harmonize prefix for all interface levels
+e.g.  fixmenoteprefix -> fxnoteprefix
+
+* Provide optional layout argument to environments
+restricted to marginclue and index though
