--- a/fixme.dtx
+++ b/fixme.dtx
@@ -841,7 +841,7 @@
 %       \begin{macro}{\fixme@note@final}
 %         The different flavors of fixme notes. Proper definitions will be
 %         selected by the |draft| or |final| options. Let's start with the
-%         note notes:
+%         fxnotes:
 %       \end{macro}
 %     \end{macro}
 %   \end{macro}
@@ -863,7 +863,7 @@
 %   \begin{macro}{\fixmewarningindexname}
 %     \begin{macro}{\fixme@warning@draft}
 %       \begin{macro}{\fixme@warning@final}
-%         Here are the warnings notes:
+%         Here are the fxwarnings:
 %       \end{macro}
 %     \end{macro}
 %   \end{macro}
@@ -887,7 +887,7 @@
 %   \begin{macro}{\fixmeerrorindexname}
 %     \begin{macro}{\fixme@error@draft}
 %       \begin{macro}{\fixme@error@final}
-%         Here are the errors notes:
+%         Here are the fxerrors:
 %       \end{macro}
 %     \end{macro}
 %   \end{macro}
@@ -908,7 +908,7 @@
 % \begin{macro}{\fixmefatalindexname}
 %   \begin{macro}{\fixme@fatal@draft}
 %     \begin{macro}{\fixme@fatal@final}
-%       And here are the fatal ones:
+%       And here are the fixmes:
 %     \end{macro}
 %   \end{macro}
 % \end{macro}
