more dtx doc update

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -933,14 +933,16 @@
     Type X to quit, fix your document, and rerun LaTeX.}}
 
 %    \end{macrocode}
-% \begin{macro}{\@fixme}
-%   \begin{macro}{\fxnote}
-%     \begin{macro}{\fxwarning}
-%       \begin{macro}{\fxerror}
-%         \begin{macro}{\fixme}
-%           Notes insertion macros. The different versions are
-%           |\let| to the draft of final flavors defined above by the
-%           \texttt{draft} or \texttt{final} options.
+% \begin{macro}{\@@fixme}
+%   \begin{macro}{\@fixme}
+%     \begin{macro}{\fxnote}
+%       \begin{macro}{\fxwarning}
+%         \begin{macro}{\fxerror}
+%           \begin{macro}{\fixme}
+%             Notes insertion macros. The different versions are
+%             |\let| to the draft of final flavors defined above by the
+%             \texttt{draft} or \texttt{final} options.
+%           \end{macro}
 %         \end{macro}
 %       \end{macro}
 %     \end{macro}
