--- a/fixme.dtx
+++ b/fixme.dtx
@@ -671,11 +671,12 @@
 %    \end{macrocode}
 %
 % \subsection{Layout macros}
+% \subsubsection{Layout generation}
 % \begin{macro}{\FXInline}
 %   \begin{macro}{\FXMargin}
 %     \begin{macro}{\FXMarginCLue}
 %       \begin{macro}{\FXFootnote}
-%         Layout generation:
+%         Textual output:
 %       \end{macro}
 %     \end{macro}
 %   \end{macro}
@@ -695,7 +696,7 @@
 %    \end{macrocode}
 % \begin{macro}{\fixmeindexname}
 %   \begin{macro}{\FXIndex}
-%     Index generation:
+%     Index output:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -737,10 +738,11 @@
 \newcommand\FiXmeWarning[1]{}
 
 %    \end{macrocode}
-% Layout conditionals. As of version 4, these conditionals are implemented
-% as |xkeyval| keys, and are available both as package and macros options.
-% The |margin| and |marginclue| layouts are mutually exclusive, so we have to
-% redefine the |xkeyval| key macro to handle this.
+% \subsubsection{Layout conditionals}
+% As of version 4, these conditionals are implemented as |xkeyval| keys, and
+% are available both as package and macros options. The |margin| and
+% |marginclue| layouts are mutually exclusive, so we have to redefine the
+% |xkeyval| key macro to handle this.
 %    \begin{macrocode}
 \fx@declarebooloptkey{layout}{margin}
 \def\fx@layout@margin#1{%
@@ -772,6 +774,7 @@
 \FXDeclareLegacyOption{nowarning}
 
 %    \end{macrocode}
+% \subsubsection{Textual output}
 % \begin{macro}{\fixme@text}
 %   This macro implements the common (textual) part of all notes:
 % \end{macro}
@@ -821,8 +824,10 @@
 %    \end{macrocode}
 %
 % \subsection{\fixme{} notes}
-% Notes counters. |fixmecount| maintains the total of all notes, regardless of
-% their level.
+% Each note comes in two flavors: |final| or |draft|. The proper definition
+% will be selected by the |draft| or |final| option.\par
+% \subsubsection{Note counters}
+% |fixmecount| maintains the total of all notes, regardless of their level.
 % \DescribeMacro{\thefixmecount}
 % \DescribeMacro{\thefixmenotecount}
 % \DescribeMacro{\thefixmewarningcount}
@@ -840,8 +845,6 @@
 %   \begin{macro}{\fixmenoteindexname}
 %     \begin{macro}{\fixme@note@draft}
 %       \begin{macro}{\fixme@note@final}
-%         The different flavors of fixme notes. Proper definitions will be
-%         selected by the |draft| or |final| options.\par
 %         fxnotes:
 %       \end{macro}
 %     \end{macro}
@@ -971,8 +974,10 @@
 %
 % \subsection{\fixme{} environments}
 % \fixme{} environments use the corresponding macro version to handle
-% inline (and possibly index) layout, and to perform logging. In |final| mode,
-% |verbatim|'s \texttt{comment} environment is used to suppress output.
+% |inline|, |marginclue| and possibly |index| layout in |draft| mode, and to
+% perform logging. In |final| mode, |verbatim|'s \texttt{comment} environment
+% is used to suppress output.
+% \subsubsection{Generic environment implementation}
 %    \begin{macrocode}
 \newcommand\FXEnvBegin{\begin{quotation}}
 \newcommand\FXEnvEnd{\end{quotation}}
@@ -994,6 +999,10 @@
 \def\@fxenvend@draft{\FXEnvEnd}
 \def\@fxenvend@final{\endcomment}
 
+%    \end{macrocode}
+%
+% \subsubsection{Actual environments implementation}
+%    \begin{macrocode}
 \newenvironment{anfxnote}[1][]{%
   \@fxenvbegin{fxnote}{#1}}{%
   \@fxenvend}
@@ -1010,7 +1019,6 @@
 %    \end{macrocode}
 %
 % \subsection{Language processing}
-% Options that control which language is selected:
 %    \begin{macrocode}
 \FXDeclareVoidOption{lang}{english}{%
   \renewcommand*\fixmenoteprefix{\fixmelogo\nobreakspace Note}
@@ -1158,6 +1166,8 @@
 }
 
 %    \end{macrocode}
+%
+% \subsection{Finale}
 % Put us in \texttt{english} and \texttt{final} mode, and enable the marginal
 % notes. Note that as documented, marginal notes are incompatible with the ACM
 % SIG classes. Initially, I thought I would detect these classes and issue
